Fix for Bug #9246  Condition pushdown and left join, wrong result